<resources>
    <string name="app_name">ASSURE</string>
    <string name="btNotSupported">Bluetooth is not supported on this device</string>
    <string name="btnDiscover">Discover devices</string>
    <string name="status">Not connected, tap to discover</string>
    <string name="subTitle">Automated Seizure Surveillance for Research in Epilepsy</string>
    <string name="statusScanning">Scanning for C3+ devices</string>
    <string name="statusConnected">Connected to C3+</string>
    <string name="yourPersonalValues"><u>Your personal thresholds</u></string>
    <string name="defaultModCSI">15000</string>
    <string name="defaultCSI">10</string>
    <string name="editValues">Edit</string>
    <string name="latestValues"><u>Latest observed values</u></string>
    <string name="waiting">Buffering… </string>
    <string name="changeThresh">Change your threshold values</string>
    <string name="btnOK">OK</string>
    <string name="btnCancel">Cancel</string>
    <string name="inputError">Must input only numbers, decimal separator is a "."</string>
    <string name="seizureNotificationTitle">🆘 SEIZURE 🆘</string>
    <string name="seizureNotificationDesc">Did you have a seizure? Select below:</string>
    <string name="batteryLevel">Device battery level</string>
    <string name="logSettingsTitle">Change which information is logged</string>
    <string name="at">at</string>
    <string name="maximumObservedValues"><u>Max observed values</u></string>
    <string name="logseizures">Log seizures</string>
    <string name="logRR">Log RR intervals</string>
    <string name="logRaw">Log raw ECG data</string>
    <string name="logBattery">Log battery consumption</string>
    <string name="reset">Reset</string>
    <string name="pressBackAgainToExit">Press back again to exit app</string>
    <string name="logThresholdChanges">Log threshold changes</string>
    <string name="dialog_confirm_disconnect">Are you sure you want to disconnect?</string>
    <string name="serviceChannelDesc">Shows a persistent notification when seizure detection is running</string>
    <string name="receiveRemoteNotifications">Receive remote seizure notifications</string>
</resources>