<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnDiscover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="btnDiscover"
        android:text="@string/btnDiscover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbStatus"
        android:layout_marginTop="20sp"
        />

    <ListView
        android:id="@+id/lvNewDevices"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/btnDiscover" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbStatus"
        app:layout_constraintTop_toBottomOf="@id/lbSubTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/themeGreen"
        android:text="@string/status"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lbTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/lbSubTitle"
        android:text="@string/subTitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/lbTitle"
        android:text="@string/app_name"
        android:textSize="28sp"
        android:textStyle="bold|italic"/>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/label1"
        android:layout_marginBottom="10sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourPersonalValues"
        android:textStyle="bold"
        android:id="@+id/label1"
        app:layout_constraintTop_toBottomOf="@+id/lvNewDevices"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label2"
        app:layout_constraintTop_toBottomOf="@+id/label1"
        app:layout_constraintStart_toStartOf="parent"
        android:text="ModCSI"
        android:textStyle="italic|bold"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label3"
        app:layout_constraintTop_toBottomOf="@+id/label1"
        app:layout_constraintStart_toEndOf="@+id/label2"
        android:layout_marginTop="10sp"
        android:layout_marginStart="80sp"
        android:text="CSI"
        android:textStyle="italic|bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvModCSI"
        app:layout_constraintTop_toBottomOf="@+id/label2"
        android:layout_marginTop="10sp"
        android:text="@string/defaultModCSI"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCSI"
        app:layout_constraintTop_toBottomOf="@+id/label2"
        android:layout_marginTop="10sp"
        app:layout_constraintStart_toStartOf="@id/label3"
        android:text="@string/defaultCSI"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEditValues"
        android:onClick="btnEditValues"
        app:layout_constraintTop_toTopOf="@+id/label2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20sp"
        android:text="@string/editValues"
        android:drawableLeft="@drawable/edit_text"
        />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/label4"
        android:layout_marginBottom="10sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label4"
        app:layout_constraintTop_toBottomOf="@id/tvModCSI"
        android:text="@string/latestValues"
        android:textStyle="bold"
        android:layout_marginStart="20sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label8"
        app:layout_constraintStart_toEndOf="@id/label4"
        app:layout_constraintTop_toTopOf="@+id/label4"
        android:layout_marginStart="5sp"
        android:text="@string/at"
        />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/latestUpdateTime"
        app:layout_constraintStart_toEndOf="@id/label8"
        app:layout_constraintTop_toTopOf="@+id/label4"
        android:layout_marginStart="5sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label5"
        app:layout_constraintStart_toStartOf="parent"
        android:text="ModCSI"
        android:textStyle="bold|italic"
        android:layout_marginStart="20sp"
        app:layout_constraintTop_toBottomOf="@id/label4"
        android:layout_marginTop="10sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/latestModCSI"
        app:layout_constraintTop_toBottomOf="@id/label5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label6"
        android:text="CSI"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@id/label3"
        app:layout_constraintTop_toBottomOf="@id/label4"
        android:layout_marginTop="10sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label7"
        android:text="@string/batteryLevel"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@id/label3"
        app:layout_constraintTop_toBottomOf="@id/label4"
        android:layout_marginTop="10sp"
        android:layout_marginStart="80sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvBatteryLevel"
        app:layout_constraintStart_toStartOf="@id/label7"
        app:layout_constraintTop_toBottomOf="@id/label6"
        android:layout_marginTop="10sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/latestCSI"
        app:layout_constraintStart_toStartOf="@id/label6"
        app:layout_constraintTop_toBottomOf="@id/label6"
        android:layout_marginTop="10sp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="btnLogSettings"
        android:layout_marginBottom="20sp"
        android:layout_marginEnd="20sp"
        android:text="Log settings"
        android:drawableLeft="@drawable/log_settings"
        />

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/label11"
        android:layout_marginBottom="10sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label11"
        app:layout_constraintStart_toStartOf="@id/latestModCSI"
        app:layout_constraintTop_toBottomOf="@id/latestModCSI"
        android:layout_marginTop="40sp"
        android:text="@string/maximumObservedValues"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/label10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ModCSI"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@id/label11"
        app:layout_constraintTop_toBottomOf="@id/label11"
        android:layout_marginTop="10sp"
        />

    <TextView
        android:id="@+id/label9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CSI"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@id/label6"
        app:layout_constraintTop_toBottomOf="@id/label11"
        android:layout_marginTop="10sp" />

    <TextView
        android:id="@+id/maxModCSI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label10"
        app:layout_constraintStart_toStartOf="@id/label10"
        android:layout_marginTop="10sp"
        />

    <TextView
        android:id="@+id/maxCSI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/label9"
        app:layout_constraintTop_toBottomOf="@id/label9"
        android:layout_marginTop="10sp"
        />

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxCSI"
        android:layout_marginTop="30sp"/>

    <TextView
        android:id="@+id/label12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/label11"
        app:layout_constraintTop_toTopOf="@id/label11"
        android:layout_marginStart="5sp"
        android:text="@string/at"
        />

    <TextView
        android:id="@+id/maxUpdateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/label12"
        app:layout_constraintTop_toTopOf="@id/label12"
        android:layout_marginStart="5sp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnResetValues"
        android:onClick="btnResetValues"
        app:layout_constraintTop_toTopOf="@+id/label10"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="20sp"
        android:text="@string/reset"
        android:drawableLeft="@drawable/reset"
        />

</androidx.constraintlayout.widget.ConstraintLayout>